added image styled div class whynyg

--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
         <article>
             <div class="main">
                 <div class="whynyg">
-                    <img src="C:\Users\Ntundu Murithi\freecode\WhatsApp Image 2023-04-27 at 11.50.55 AM.jpeg" alt="Nguthi Ya Ghetto podcast" class="center">
+                    <img src= "logo.jpeg" alt="Nguthi Ya Ghetto podcast" class="center">
                 </div>
                 <p>this is awesome</p>
             </div>
